--- a/demo-spring/demo-spring-netflix/pom.xml
+++ b/demo-spring/demo-spring-netflix/pom.xml
@@ -3,20 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>tiger-forest</artifactId>
+        <artifactId>demo-spring</artifactId>
         <groupId>com.xhh.demo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>demo-spring</artifactId>
-    <packaging>pom</packaging>
-    <name>Demo Spring</name>
 
-    <modules>
-        <module>demo-spring-schema</module>
-        <module>demo-spring-test</module>
-        <module>demo-spring-boot</module>
-        <module>demo-spring-netflix</module>
-    </modules>
+    <artifactId>demo-spring-netflix</artifactId>
 
 </project>
