--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,8 @@
         <module>demo-http</module>
         <module>demo-hadoop</module>
         <module>demo-zookeeper</module>
-        <module>demo-fastdfs</module>
         <module>demo-spring</module>
         <module>demo-dubbo</module>
-        <module>demo-apache</module>
         <module>demo-algorithms</module>
     </modules>
 
@@ -49,8 +47,8 @@
         <spring.test.version>4.1.9.RELEASE</spring.test.version>
         <junit.version>4.12</junit.version>
         <guava.version>19.0</guava.version>
-        <spring.boot.version>1.3.5.RELEASE</spring.boot.version>
-        <squareup.retrofit.version>2.0.2</squareup.retrofit.version>
+        <spring.boot.version>1.4.0.RELEASE</spring.boot.version>
+        <squareup.retrofit.version>2.5.0</squareup.retrofit.version>
         <springfox.swagger2.version>2.4.0</springfox.swagger2.version>
     </properties>
 
@@ -59,7 +57,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Brixton.SR4</version>
+                <version>Brixton.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -208,7 +206,7 @@
             <dependency>
                 <groupId>com.thoughtworks.xstream</groupId>
                 <artifactId>xstream</artifactId>
-                <version>1.4.4</version>
+                <version>1.4.10</version>
             </dependency>
             <dependency>
                 <groupId>org.jdom</groupId>
@@ -287,12 +285,6 @@
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-test</artifactId>
                 <version>${spring.test.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
